add JWT in login
